Fix landscape orientation on iOS Safari
* subimage was causing webgl to go blank when
  orientation changed
* Use body dimensions instead of window dimensions, which are
  always weird on iOS Safari
* There's still an issue when starting in landscape, content
  appears at the bottom of the screen

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,9 @@
+html, body {
+    width: 100%;
+    height: 100%;
+}
 
-video {
-    position: absolute;
-    max-width: 25%;
+body {
+    margin: 0;
+    overflow: hidden;
 }
